src/test/resources/valid/SimpleTestClass.java
import java.util.RandomAccess;

import io.higgs.spi.ProviderFor;

@ProviderFor(RandomAccess.class)
public class SimpleTestClass implements RandomAccess {
	
}
