src/test/resources/invalid/NoImplementationTestClass.java
import java.util.RandomAccess;

import io.higgs.spi.ProviderFor;

@ProviderFor(RandomAccess.class)
public class NoImplementationTestClass {
}
